invisible elements no longer :hover for next-prev

--- a/c/cheetah-responsive.scss
+++ b/c/cheetah-responsive.scss
@@ -464,8 +464,9 @@ body { // Previously had body.ngm but the NGS video player
 								
 								img {
 									
+									height: 0;
 									opacity: 0;
-									@include transition (opacity 0.2s linear); 
+									@include transition (opacity 0.2s linear, height 0.2s linear); 
 									
 								}
 								
@@ -506,12 +507,19 @@ body { // Previously had body.ngm but the NGS video player
 								z-index: 20;
 								
 								img, h1, h2, h3 {
-									 
-									opacity: 1;
-									@include transition (opacity 0.2s linear); 
+									
+									z-index: auto;
+									@include transition (opacity 0.2s linear, height 0.2s linear); 
 									
 								}	
-							
+								
+								img {
+									
+									opacity: 1;
+									height: 100%;
+									
+								}
+								
 							}
 							
 						}
